# mun-site

./: .gitignore  README.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: nextjs.yml
backend/: Cargo.toml
backend/src/: main.rs  mongo.rs
components/: Footer.tsx  Nav.tsx  People.tsx
docs/: 404.html  about.html  faq.html  index.html  register.html  sponsors.html
docs/_next/static/chunks/: 669-d1cdd8e31c50191b.js
docs/_next/static/chunks/pages/: _app-08a79ccced875e8d.js  about-1f3787df4e2e22be.js  about-3ef9293c3bb4e8dd.js  faq-a9568ec907317104.js  faq-e6ea0a3c98e48108.js  index-92052141391b259c.js  register-62e64e834c967d52.js  register-ae2ec14ffcad22cd.js  sponsors-29c6b530b9ceecbf.js  sponsors-5f01c659f689866b.js
docs/_next/static/css/: f5060b335d974124.css
docs/_next/static/njtSfMcjkCF0DszfB6b4N/: _buildManifest.js
mun/: package-lock.json  package.json  tailwind.config.js
mun/components/: Butonkh.jsx  Footer.tsx  Nav.tsx  People.tsx
mun/components/three/: Earth.tsx
mun/pages/: about.tsx  faq.tsx  index.tsx  register.tsx  sponsors.tsx
mun/styles/: globals.css
pages/: about.tsx  faq.tsx  index.tsx  register.tsx  sponsors.tsx
styles/: globals.css
