[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors =["CroxxN saradgaihre19@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.2.1", features = ["rustls"]}
mongodb = "2.3.1"
"dotenv" = "0.15.0"
"serde" = {version = "1.0.130", features = ["derive"]}